--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bernatfortet.airtable",
+  "name": "airtable",
   "version": "0.12.5",
   "license": "MIT",
   "homepage": "https://github.com/airtable/airtable.js",
